// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots RuleInput default Input Boolean (False) 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "margin": "1em",
    }
  }
>
  <div
    style={
      Object {
        "flexBasis": "50%",
      }
    }
  >
    Unbundle Parking from Rent
  </div>
  <input
    checked={false}
    name="UNBUNDLE_PARKING"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "20%",
      }
    }
    type="checkbox"
    value={true}
  />
  <div
    style={
      Object {
        "flexBasis": "20%",
        "marginLeft": "1em",
      }
    }
  >
    
  </div>
</div>
`;

exports[`Storyshots RuleInput default Input Boolean (True) 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "margin": "1em",
    }
  }
>
  <div
    style={
      Object {
        "flexBasis": "50%",
      }
    }
  >
    Unbundle Parking from Rent
  </div>
  <input
    checked={true}
    name="UNBUNDLE_PARKING"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "20%",
      }
    }
    type="checkbox"
    value={true}
  />
  <div
    style={
      Object {
        "flexBasis": "20%",
        "marginLeft": "1em",
      }
    }
  >
    
  </div>
</div>
`;

exports[`Storyshots RuleInput default Input Number 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "margin": "1em",
    }
  }
>
  <div
    style={
      Object {
        "flexBasis": "50%",
      }
    }
  >
    Sq Ft - Retail
  </div>
  <input
    name="SF_RETAIL"
    onChange={[Function]}
    style={
      Object {
        "flexBasis": "20%",
      }
    }
    type="number"
    value=""
  />
  <div
    style={
      Object {
        "flexBasis": "20%",
        "marginLeft": "1em",
      }
    }
  >
    sq ft
  </div>
</div>
`;
